--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <img src="https://gist.githubusercontent.com/edenpersad/2452d6ffb206467376c3386b489e3c31/raw/740627d70e4775996dd784f8a3343978070cff3c/Yale_35_LH_base_130624.svg" class="svg1" alt="Base">
         <img src="https://gist.githubusercontent.com/edenpersad/7edfa3c4a6c2cc3a65731410021b1101/raw/2e78ad52ad408f68422aa0514d740779f896676c/Yale_35_LH_opt1_Butlers_Pantry_130624.svg" class="svg2" alt="Opt1">
     </div>
-    <button onclick="toggleSVG()">Toggle Top Layer</button>
+    <button onclick="toggleSVG()">Toggle Option 1</button>
 
     <script>
         function toggleSVG() {
